--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "repository": "git@github.com:RafaelDomingues-R2D2/clone-tabnews.git",
   "license": "MIT",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "lint:check": "prettier --check .",
+    "lint:fix": "prettier --write ."
   },
   "dependencies": {
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.6.2"
   }
 }
